hphp/test/zend/good/Zend/tests/class_constants_001.php.expectf
string(6) "string"
int(1)

Fatal error: Couldn't find constant test::val3 in %s/class_constants_001.php on line 11
